added get products
