# backend/model/http/requests/productRequests.ts
@@ -1,7 +1,27 @@
 export interface IProductQueryRequest {
-    id: string;
-    name: string;
-    categoryId: string;
+     
+    /**
+     * @optionalString
+     */
+    id?: string;
+    /**
+     * @optionalString
+     */
+    name?: string;
+
+    /**
+     * @optionalString
+     */
+    categoryId?: string;
+    /**
+   * @isInt Invalid int error message.
+   * @minimum 0
+   * @default 100
+   */
     limit: number;
+    /**
+   * @isInt Invalid int error message.
+   * @minimum 0
+   */
     offset: number;
 }
